--- a/public/add.html
+++ b/public/add.html
@@ -14,18 +14,30 @@
     #preview { margin-top:20px; }
     iframe,video { width:100%; height:360px; border:none; border-radius:8px; }
     #descriptionEditor { height:120px; }
-    #toastContainer { position:fixed; top:20px; left:50%; transform:translateX(-50%); z-index:2000; }
+    #toastContainer { position:fixed; top:20px; left:50%; transform:translateX(-50%); z-index:4000; }
+
+    /* شاشة التحميل عند فتح الصفحة */
     #loadingOverlay {
       position:fixed; top:0; left:0; width:100%; height:100%;
       background:rgba(0,0,0,.5); display:flex; align-items:center; justify-content:center; flex-direction:column;
       z-index:3000; color:#fff; font-size:1.2rem;
     }
+
+    /* شاشة الحفظ عند الإرسال */
+    #savingOverlay {
+      position:fixed; top:0; left:0; width:100%; height:100%;
+      background:rgba(0,123,255,.7); display:none; align-items:center; justify-content:center; flex-direction:column;
+      z-index:3500; color:#fff; font-size:1.2rem;
+    }
+
     #pageContent { display:none; }
+
     /* الوضع الليلي */
     body.dark-mode { background-color:#121212; color:#eaeaea; }
     body.dark-mode .form-section { background:#1e1e1e; color:#ddd; }
     body.dark-mode .modal-content { background:#1e1e1e; color:#fff; }
     body.dark-mode .btn-close { filter:invert(1); }
+
     /* Tooltips */
     .custom-tooltip.bs-tooltip-auto[x-placement^=top],
     .custom-tooltip.bs-tooltip-top {
@@ -42,7 +54,13 @@
 <!-- شاشة التحميل -->
 <div id="loadingOverlay">
   <div class="spinner-border text-light" style="width:3rem;height:3rem"></div>
-  <p class="mt-3" id="loadingText">جاري التحميل...⏳</p>
+  <p class="mt-3">جاري التحميل...⏳</p>
+</div>
+
+<!-- شاشة الحفظ -->
+<div id="savingOverlay">
+  <div class="spinner-border text-light" style="width:3rem;height:3rem"></div>
+  <p class="mt-3">جاري الحفظ...💾</p>
 </div>
 
 <div id="pageContent">
@@ -90,8 +108,6 @@
         <button type="submit" class="btn btn-primary" data-bs-toggle="tooltip" title="حفظ الفيديو">إضافة الفيديو</button>
       </div>
     </form>
-
-    <div id="confirmation" class="alert alert-success mt-3 d-none"></div>
   </div>
 </div>
 
@@ -220,25 +236,21 @@ document.getElementById("confirmDeleteBtn").addEventListener("click",async()=>{
   bootstrap.Modal.getInstance(document.getElementById("confirmDeleteModal")).hide(); departmentToDelete=null;
 });
 
-// ✅ إضافة الفيديو مع Overlay
+// ✅ إضافة الفيديو مع Overlay خاص بالحفظ
 document.getElementById('videoForm').addEventListener('submit',async e=>{
   e.preventDefault();
-  document.getElementById("loadingText").textContent="جاري الحفظ...⏳";
-  document.getElementById("loadingOverlay").style.display="flex";
+  document.getElementById("savingOverlay").style.display="flex";
 
   const title=document.getElementById('title').value, url=document.getElementById('url').value, description=quill.root.innerHTML, department=document.getElementById('department').value;
   try {
     const res=await fetch(`${API_BASE}/api/videos`,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({title,link:url,url,description,department})});
     if(res.ok){
-    /*  document.getElementById('confirmation').textContent='✅ تم إضافة الفيديو بنجاح';*/
-      document.getElementById('confirmation').classList.remove('d-none');
       document.getElementById('videoForm').reset(); quill.setContents([]); document.getElementById('preview').innerHTML='';
-      loadDepartments(); showToast("✅ تم إضافة الفيديو بنجاح","success");
+      loadDepartments(); showToast("تم إضافة الفيديو بنجاح","success");
     } else showToast("❌ حدث خطأ أثناء الإضافة","danger");
   } catch { showToast("❌ فشل الاتصال بالخادم","danger"); }
   finally {
-    document.getElementById("loadingOverlay").style.display="none";
-    document.getElementById("loadingText").textContent="جاري التحميل...⏳";
+    document.getElementById("savingOverlay").style.display="none";
   }
 });
 
