--- a/public/test.html
+++ b/public/test.html
@@ -1,270 +1,120 @@
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>تسجيل الدخول - نظام اللجان</title>
-  <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/f283e4rvv5cf9x12a1cic/my-website-logo.png?rlkey=yia776im7klypy27af32m0scy&e=1&st=vhaprvzh&dl=1"
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap (RTL) + Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-
+  <title>إدارة اللجان</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <style>
-    body {
-      background: linear-gradient(135deg, #f3f4f6, #e5e7eb);
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-    }
-    .login-card {
-      max-width: 420px; width: 100%; margin: auto;
-      background: #fff; border-radius: 16px;
-      box-shadow: 0 15px 30px rgba(0,0,0,.08);
-      overflow: hidden;
-    }
-    .login-header {
-      background: #0d6efd; color: #fff; padding: 18px; text-align: center;
-    }
-    .brand {
-      font-size: 18px; font-weight: 700; display: flex; align-items: center; gap: 8px; justify-content: center;
-    }
-    .brand i { font-style: normal; font-weight: 400; opacity: .9; }
-    .login-body { padding: 20px 22px 24px; }
-    .form-control:focus { box-shadow: 0 0 0 .2rem rgba(13,110,253,.15); }
-    .btn-primary { border-radius: 10px; }
-    .toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 2000; }
-    .spinner-border-sm { --bs-spinner-width: 1rem; --bs-spinner-height: 1rem; }
-    .password-toggle-btn { min-width: 2.75rem; }
+    body { background-color: #f8f9fa; font-family: 'Segoe UI', sans-serif; }
+    .container { margin-top: 40px; }
+    .card { border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
+    .toast-container { position: fixed; top: 20px; left: 20px; z-index: 2000; }
   </style>
 </head>
 <body>
-  <div class="login-card" aria-live="polite">
-    <div class="login-header">
-      <div class="brand">🔐 نظام اللجان <i>| تسجيل الدخول</i></div>
+  <div class="container">
+    <h3 class="text-center mb-4">🧩 إدارة أسماء اللجان</h3>
+
+    <div class="card p-4 mb-4">
+      <div class="mb-3">
+        <label class="form-label">اسم اللجنة</label>
+        <input type="text" id="committeeName" class="form-control" placeholder="أدخل اسم اللجنة">
+      </div>
+      <button class="btn btn-primary w-100" onclick="addCommittee()">➕ إضافة لجنة</button>
     </div>
 
-    <div class="login-body">
-      <form id="loginForm" novalidate>
-        <div class="mb-3">
-          <label class="form-label" for="username">اسم المستخدم</label>
-          <input
-            type="text"
-            id="username"
-            class="form-control"
-            placeholder="مثال: b01578"
-            autocomplete="username"
-            autocapitalize="none"
-            spellcheck="false"
-            inputmode="text"
-            required
-          >
-          <div class="invalid-feedback">يرجى إدخال اسم المستخدم.</div>
-        </div>
-
-        <div class="mb-2">
-          <label class="form-label" for="password">كلمة المرور</label>
-          <div class="input-group">
-            <input
-              type="password"
-              id="password"
-              class="form-control"
-              placeholder="••••••••"
-              autocomplete="current-password"
-              required
-            >
-            <button
-              id="togglePwBtn"
-              class="btn btn-outline-secondary password-toggle-btn"
-              type="button"
-              aria-label="إظهار كلمة المرور"
-              title="إظهار/إخفاء كلمة المرور"
-            >
-              <i class="bi bi-eye" aria-hidden="true"></i>
-            </button>
-            <div class="invalid-feedback">يرجى إدخال كلمة المرور.</div>
-          </div>
-        </div>
-
-        <div class="d-grid mt-3">
-          <button type="submit" id="submitBtn" class="btn btn-primary" aria-busy="false">
-            <span class="btn-text">دخول</span>
-            <span class="btn-wait d-none">
-              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-              جاري التحقق...
-            </span>
-          </button>
-        </div>
-      </form>
-    </div>
+    <table class="table table-bordered table-striped">
+      <thead>
+        <tr>
+          <th>اللجنة</th>
+          <th width="150">الإجراءات</th>
+        </tr>
+      </thead>
+      <tbody id="committeesTable">
+        <tr><td colspan="2" class="text-center">جاري التحميل...</td></tr>
+      </tbody>
+    </table>
   </div>
 
-  <!-- Toasts -->
   <div class="toast-container">
-    <div id="toastSuccess" class="toast text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="3500" data-bs-autohide="true">
-      <div class="d-flex">
-        <div class="toast-body">✅ تم تسجيل الدخول بنجاح</div>
-        <button type="button" class="btn-close btn-close-white m-2 me-3" data-bs-dismiss="toast" aria-label="Close"></button>
-      </div>
-    </div>
-    <div id="toastError" class="toast text-bg-danger border-0" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000" data-bs-autohide="true">
-      <div class="d-flex">
-        <div class="toast-body">❌ حدث خطأ</div>
-        <button type="button" class="btn-close btn-close-white m-2 me-3" data-bs-dismiss="toast" aria-label="Close"></button>
-      </div>
-    </div>
-    <div id="toastInfo" class="toast text-bg-primary border-0" role="status" aria-live="polite" aria-atomic="true" data-bs-delay="2500" data-bs-autohide="true">
-      <div class="d-flex">
-        <div class="toast-body">ℹ️</div>
-        <button type="button" class="btn-close btn-close-white m-2 me-3" data-bs-dismiss="toast" aria-label="Close"></button>
-      </div>
-    </div>
+    <div id="successToast" class="toast text-bg-success"></div>
+    <div id="errorToast" class="toast text-bg-danger"></div>
   </div>
 
-  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    /* === إعداد أساس الواجهة الخلفية حسب البيئة === */
-    const RENDER_BASE = 'https://vdash-qkyv.onrender.com';
-    const host = location.hostname;
-    const isGithub = host.endsWith('github.io');
-    const isLocal  = host === 'localhost' || host === '127.0.0.1';
-    const API_BASE = isGithub ? RENDER_BASE : (isLocal ? 'http://localhost:3000' : '');
-    const go = (path) => isGithub ? (RENDER_BASE + path) : path;
+    const successToast = new bootstrap.Toast(document.getElementById("successToast"));
+    const errorToast = new bootstrap.Toast(document.getElementById("errorToast"));
 
-    /* === Toast helpers === */
-    const TSuccess = new bootstrap.Toast(document.getElementById('toastSuccess'));
-    const TError   = new bootstrap.Toast(document.getElementById('toastError'));
-    const TInfo    = new bootstrap.Toast(document.getElementById('toastInfo'));
-    function setToast(el, msg) { el._element.querySelector('.toast-body').textContent = msg; }
-    function showSuccess(msg){ setToast(TSuccess, msg); TSuccess.show(); }
-    function showError(msg){ setToast(TError, msg); TError.show(); }
-    function showInfo(msg){ setToast(TInfo, msg); TInfo.show(); }
-
-    /* === Password toggle (ثابتة وتعمل مع الأيقونة) === */
-    const pwInput = document.getElementById('password');
-    const togglePwBtn = document.getElementById('togglePwBtn');
-    togglePwBtn.addEventListener('click', () => {
-      const isPw = pwInput.type === 'password';
-      pwInput.type = isPw ? 'text' : 'password';
-      // تبديل الأيقونة ونص الوصولية
-      const icon = togglePwBtn.querySelector('i');
-      icon.className = isPw ? 'bi bi-eye-slash' : 'bi bi-eye';
-      togglePwBtn.setAttribute('aria-label', isPw ? 'إخفاء كلمة المرور' : 'إظهار كلمة المرور');
-      // إبقاء التركيز داخل الحقل لتجربة أفضل
-      pwInput.focus({ preventScroll: true });
-    });
-
-    /* === حساب صفحة التحويل بعد النجاح === */
-    function getNextUrl() {
-      const params = new URLSearchParams(window.location.search);
-      const next = params.get('next');
-      const safe = next && next.startsWith('/') ? next : '/committees-home.html';
-      return go(safe);
+    function showToast(toast, msg) {
+      toast._element.querySelector(".toast-body")?.remove();
+      const body = document.createElement("div");
+      body.className = "toast-body";
+      body.textContent = msg;
+      toast._element.appendChild(body);
+      toast.show();
     }
 
-    /* === زر التحميل/الانشغال === */
-    function setSubmitting(isLoading) {
-      const btn = document.getElementById('submitBtn');
-      btn.disabled = isLoading;
-      btn.setAttribute('aria-busy', String(!!isLoading));
-      btn.querySelector('.btn-text').classList.toggle('d-none', isLoading);
-      btn.querySelector('.btn-wait').classList.toggle('d-none', !isLoading);
-    }
-    function markInvalid(el, on = true) {
-      el.classList.toggle('is-invalid', !!on);
-    }
-
-    /* === مهلة للشبكة === */
-    function fetchWithTimeout(resource, options = {}) {
-      const { timeout = 10000 } = options;
-      const controller = new AbortController();
-      const id = setTimeout(() => controller.abort(), timeout);
-      return fetch(resource, { ...options, signal: controller.signal })
-        .finally(() => clearTimeout(id));
-    }
-
-    /* === إن كان المستخدم مسجّلاً بالفعل، يعاد توجيهه فورًا === */
-    (async function redirectIfAuthenticated(){
+    async function loadCommittees() {
       try {
-        const r = await fetch(`${API_BASE}/auth/committees/me`, { credentials: 'include' });
-        const j = await r.json().catch(()=> ({}));
-        if (j?.authenticated) {
-          showInfo('✅ أنت مسجّل دخولًا، جارٍ تحويلك…');
-          setTimeout(() => { window.location.href = getNextUrl(); }, 400);
-        }
-      } catch { /* تجاهل */ }
-    })();
-
-    /* === إرسال النموذج (بدون مستمع Enter إضافي لمنع الإرسال المزدوج) === */
-    document.getElementById('loginForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-
-      const btn = document.getElementById('submitBtn');
-      const u   = document.getElementById('username');
-      const p   = document.getElementById('password');
-
-      if (btn.disabled) return; // منع النقرات المتكررة
-
-      // تحقق أولي
-      let valid = true;
-      if (!u.value.trim()) { markInvalid(u, true); valid = false; } else { markInvalid(u, false); }
-      if (!p.value.trim()) { markInvalid(p, true); valid = false; } else { markInvalid(p, false); }
-      if (!valid) { showError('⚠️ يرجى تعبئة الحقول المطلوبة'); return; }
-
-      try {
-        setSubmitting(true);
-        const res = await fetchWithTimeout(`${API_BASE}/auth/committees/login`, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          credentials: 'include',
-          timeout: 10000,
-          body: JSON.stringify({ username: u.value.trim(), password: p.value })
+        const res = await axios.get("/api/committees-master");
+        const tbody = document.getElementById("committeesTable");
+        tbody.innerHTML = "";
+        res.data.forEach(c => {
+          const tr = document.createElement("tr");
+          tr.innerHTML = `
+            <td><input type="text" class="form-control form-control-sm" value="${c.name}" onchange="updateCommittee('${c._id}', this.value)"></td>
+            <td><button class="btn btn-danger btn-sm" onclick="deleteCommittee('${c._id}')">🗑️ حذف</button></td>
+          `;
+          tbody.appendChild(tr);
         });
-
-        let data = {};
-        try { data = await res.json(); } catch { /* تجاهل */ }
-
-        if (!res.ok) {
-          // تخصيص الرسائل حسب الحالة
-          if (res.status === 400) {
-            markInvalid(u, !u.value.trim());
-            markInvalid(p, !p.value.trim());
-            showError(data?.message || '❌ اسم المستخدم/البريد وكلمة المرور مطلوبة');
-          } else if (res.status === 401) {
-            // الخادم لا يُفصح إن كان الحساب معطَّل أو البيانات خاطئة،
-            // لكن إن أرسل رسالة واضحة نُظهرها كما هي.
-            const msg = (data?.message || '').toLowerCase();
-            if (msg.includes('معطل') || msg.includes('غير نشط') || msg.includes('inactive')) {
-              showError('🚫 حسابك معطّل. الرجاء التواصل مع المشرف لتفعيله.');
-            } else {
-              showError('❌ بيانات الدخول غير صحيحة أو أن الحساب معطّل.');
-            }
-            markInvalid(u, true);
-            markInvalid(p, true);
-          } else if (res.status === 403) {
-            showError(data?.message || '❌ غير مصرح بالدخول');
-          } else {
-            showError(data?.message || '❌ تعذّر تسجيل الدخول (خطأ غير متوقع)');
-          }
-          return;
+        if (res.data.length === 0) {
+          const tr = document.createElement("tr");
+          tr.innerHTML = `<td colspan="2" class="text-center">لا توجد بيانات</td>`;
+          tbody.appendChild(tr);
         }
-
-        // نجاح
-        showSuccess(data?.message || '✅ تم تسجيل الدخول بنجاح');
-        setTimeout(() => { window.location.href = getNextUrl(); }, 700);
-
       } catch (err) {
-        if (err?.name === 'AbortError') {
-          showError('⏱️ انتهت مهلة الاتصال. تحقق من الشبكة وحاول مجددًا.');
-        } else {
-          showError('❌ تعذّر الاتصال بالخادم');
-        }
-      } finally {
-        setSubmitting(false);
+        showToast(errorToast, "❌ فشل في جلب اللجان");
       }
-    });
+    }
+
+    async function addCommittee() {
+      const name = document.getElementById("committeeName").value.trim();
+      if (!name) return showToast(errorToast, "⚠️ أدخل اسم اللجنة");
+      try {
+        await axios.post("/api/committees-master", { name });
+        showToast(successToast, "✅ تمت إضافة اللجنة");
+        document.getElementById("committeeName").value = "";
+        loadCommittees();
+      } catch {
+        showToast(errorToast, "❌ لم يتم الإضافة (قد يكون الاسم مكررًا)");
+      }
+    }
+
+    async function updateCommittee(id, name) {
+      if (!name.trim()) return showToast(errorToast, "⚠️ أدخل اسمًا صحيحًا");
+      try {
+        await axios.put(`/api/committees-master/${id}`, { name });
+        showToast(successToast, "✅ تم التعديل");
+      } catch {
+        showToast(errorToast, "❌ فشل التعديل (قد يكون الاسم مكررًا)");
+      }
+    }
+
+    async function deleteCommittee(id) {
+      if (!confirm("هل أنت متأكد من الحذف؟")) return;
+      try {
+        await axios.delete(`/api/committees-master/${id}`);
+        showToast(successToast, "🗑️ تم الحذف");
+        loadCommittees();
+      } catch {
+        showToast(errorToast, "❌ فشل الحذف");
+      }
+    }
+
+    loadCommittees();
   </script>
 </body>
 </html>
